--- a/storiestream_project/templates/curves/index.html
+++ b/storiestream_project/templates/curves/index.html
@@ -12,8 +12,8 @@
         /* I like this color #cce6ff */
 
         body {
-            background-color: palegreen;
-            color: white;
+            background-color: floralwhite;
+            color: saddlebrown;
             font-size: 20px;
             /*overflow-x: hidden;*/
             /*overflow-y: hidden;*/
@@ -31,26 +31,26 @@
             justify-content: center;
             align-content: center;
             white-space: nowrap;
-            border-left: 5px solid lightgreen;
-            border-right: 5px solid lightgreen;
+            border-left: 5px solid brown;
+            border-right: 5px solid brown;
 
 
             /*overflow: hidden;*/
         }
         #container > div:first-child {
-            border-top: 3px solid lightgreen;
+            border-top: 3px solid brown;
 
         }
         #container> div:last-child {
-            border-bottom: 3px solid lightgreen;
+            border-bottom: 3px solid brown;
         }
 
         #container > div:nth-child(odd) {
-            background-color: #66d9ff;
+            background-color: floralwhite;
         }
 
         #container > div:nth-child(even) {
-          background-color: #6699ff;
+          background-color: floralwhite;
 }
 
     </style>
@@ -262,7 +262,7 @@
                 // Might be pointless to have line_height
                 div.style.height = line_height + 'px';
                 // It is important that width be constant. When width is adustable by pixels this may not be needed.
-                div.style.width = '400px';   // DON'T LOSE THIS
+                div.style.width = '300px';   // DON'T LOSE THIS
                 // Add new div to our outter div "container"
                 container.appendChild(div);
 
@@ -331,8 +331,8 @@
         ' dreamcatcher.Oh. You need a little dummy text for your mockup? How quaint.I bet you’re still using Bootstrap too…'
 
     // In this iteration we are judging width on characters instead of pixels. Will go back to pixels later.
-    let width = 40; // our width we use when making lines, etc.
-    let line_height = 60;
+    let width = 30; // our width we use when making lines, etc.
+    let line_height = 30;
     let container = document.querySelector('#container'); // This is the div we automatically populate that you can see in the html. We create more than one of these.
 
 
