--- a/storiestream_project/edits/templates/edits/index.html
+++ b/storiestream_project/edits/templates/edits/index.html
@@ -1,4 +1,5 @@
 
+{% load static %}
 <head>
     <link href="{% static 'CSS/path.css' %}" rel="stylesheet">
     <script src="{% static 'JS/path.js' %}"> </script>
@@ -7,8 +8,18 @@
 
 <div id="container"></div>
 
+<form action="{% url 'edits:index' %}" method="POST" enctype="multipart/form-data">
+    <!-- ... -->
+    {% csrf_token %}
+    <input type="text" name="name">
+    <input type="file" name="text_file" accept="txt/*" required>
+    <button type="submit">submit</button>
+</form>
 
-<script src="{%% static 'JS/main.js' %}}"> </script>
+<script src="{% static 'JS/main.js' %}"> </script>
+    <script>
+        let text = `{{text}}`;
+    </script>
 </body>
 
 
