--- a/storiestream_project/curves/templates/curves/index.html
+++ b/storiestream_project/curves/templates/curves/index.html
@@ -21,8 +21,8 @@
 
         #container {
             /*   border: 1px solid white; */
-            width: 100%;
-            height: 100%;
+            width: 10px;
+            height: 10px;
             /*overflow: hidden;*/
         }
 
